--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+    <!-- header+nav -->
+    <header>
+        <nav class="flex">
+            <div class="logo">
+                <img src="img/logo-small.png" height="30px" alt="Logo dropbox nav">
+            </div>
+            <ul class="grow">
+                <li> <a href="#">Perchè Dropbox</a></li>
+                <li> <a href="#">Funzioni</a></li>
+                <li> <a href="#">Piani e Prezzi</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">Supporto</a></li>
+                <li><a href="#">Contatta l'ufficio vendite</a></li>
+                <li><a href="#">Accedi</a></li>
+                <li><a href="#">Inizia</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
