second section struttura

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <!-- main +section -->
 
     <main>
+        <!-- fisrt section hero -->
         <section class="hero">
             <div class="container-large">
                 <div class="hero_title">
@@ -44,7 +45,25 @@
                         <p >Annulla in qualsisi momento</p>
                         <span  class="flex" id="down-arrow"><i class="fa-solid fa-arrow-down"></i></span>
                     </div>
-                    <div class="hero_col"></div>
+                    <div class="hero_col-2">
+                        <img src="img/jumbo.png" alt="Jumbo">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- second section -->
+        <section>
+            <div class="container">
+                <h2></h2>
+            </div>
+            <div class="container">
+                <div class="row"></div>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
                 </div>
             </div>
         </section>
