--- a/index.html
+++ b/index.html
@@ -53,17 +53,59 @@
         </section>
 
         <!-- second section -->
-        <section>
-            <div class="container">
-                <h2></h2>
+        <section class="plane-business">
+            <div class="container-small">
+                <h2>Trova il piano business che fa per te</h2>
             </div>
-            <div class="container">
-                <div class="row"></div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
+            <div class="container-small">
+                <div class="plane-row">
+                    <div>
+                        <input type="radio" value="Fatturazione Mensile">Fatturazione Mensile
+                        <input type="radio" value="Fatturazione Annuale">Fatturazione Annuale
+                    </div>
+                </div>
+                <div class="plane-row-card">
+                    <!-- verticale -->
+                    <div class="plane-row_col">
+                        <div class="plane_card">
+                            <header>
+                                <div class="title_card">
+                                    <i class="fa-solid fa-user"></i>
+                                    <h3>Professional</h3>
+                                </div>
+                            </header>
+                            <main>
+                                <div class="body_card">
+                                    <ul>
+                                        <li><h2>Professional</h2></li>
+                                        <li> &euro; 12,00</li>
+                                        <li>/mese</li>
+                                    </ul>
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                        <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
+                                        <li><i class="fa-solid fa-share-nodes"></i>funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    </ul>
+
+                                    <button class="button blue_button">Prova gratis per 30 giorni</button>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                </div>
+                                <div class="body_card">
+                                    <h3>Punti salienti del piano</h3>
+                                    <ul>
+                                        <li><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert </li>
+                                        <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                    </ul>
+                                </div>
+                            </main>
+                        </div>
+                    </div>
+
+                    <!-- orizzontale -->
+                    <div class="plane-row_col">
+                        <div class="card"></div>
+                    </div>
+                   
                 </div>
             </div>
         </section>
