--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="plane-row-card">
                     <!-- verticale -->
-                    <div class="plane-row_col">
+                    <div class="plane-row_col flex">
                         <div class="plane_card">
                             <header>
                                 <div class="title_card">
@@ -74,8 +74,8 @@
                                     <h3>Professional</h3>
                                 </div>
                             </header>
-                            <main>
-                                <div class="body_card">
+                            <main class="flex">
+                                <div class="body_card .flex">
                                     <ul>
                                         <li><h2>Professional</h2></li>
                                         <li> &euro; 12,00</li>
