fixed 1 card (error)

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="container-small">
                 <div class="plane-row">
-                    <div>
+                    <div class="input">
                         <input type="radio" value="Fatturazione Mensile">Fatturazione Mensile
                         <input type="radio" value="Fatturazione Annuale">Fatturazione Annuale
                     </div>
@@ -71,23 +71,23 @@
                             <header>
                                 <div class="title_card">
                                     <i class="fa-solid fa-user"></i>
-                                    <h3>Professional</h3>
+                                    <h4>Singolo</h4>
                                 </div>
                             </header>
                             <main class="flex">
                                 <div class="body_card .flex">
-                                    <ul>
-                                        <li><h2>Professional</h2></li>
-                                        <li> &euro; 12,00</li>
-                                        <li>/mese</li>
-                                    </ul>
+                                    
+                                    <h3>Professional</h3>
+                                    <strong>&euro; 12,00</strong>
+                                    <div>/mese</div>
+
                                     <ul>
                                         <li><i class="fa-solid fa-user"></i> 1 utente</li>
                                         <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
                                         <li><i class="fa-solid fa-share-nodes"></i>funzioni di produttività premium e condivisione file semplice e sicura</li>
                                     </ul>
 
-                                    <button class="button blue_button">Prova gratis per 30 giorni</button>
+                                    <button class="button blue_button" id="button-padding">Prova gratis per 30 giorni</button>
                                     <p>oppure <a href="#">acquista ora</a></p>
                                 </div>
                                 <div class="body_card">
