--- a/index.html
+++ b/index.html
@@ -74,8 +74,42 @@
                                     <h4>Singolo</h4>
                                 </div>
                             </header>
-                            <main class="flex">
-                                <div class="body_card .flex">
+                            <main class="flex ">
+                                <div class="body_card flex border-gray">
+                                    
+                                    <h3>Professional</h3>
+                                    <strong>&euro; 12,00</strong>
+                                    <div>/mese</div>
+
+                                    <ul>
+                                        <li><i class="fa-solid fa-user"></i> 1 utente</li>
+                                        <li><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</li>
+                                        <li><i class="fa-solid fa-share-nodes"></i>funzioni di produttività premium e condivisione file semplice e sicura</li>
+                                    </ul>
+
+                                    <button class="button blue_button" id="button-padding">Prova gratis per 30 giorni</button>
+                                    <p>oppure <a href="#">acquista ora</a></p>
+                                </div>
+                                <div class="body_card">
+                                    <h3>Punti salienti del piano</h3>
+                                    <ul>
+                                        <li><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert </li>
+                                        <li><i class="fa-solid fa-check"></i>Cartelle offline su dispositivi mobili</li>
+                                    </ul>
+                                </div>
+                            </main>
+                        </div>
+                    </div>
+                    <div class="plane-row_col flex">
+                        <div class="plane_card">
+                            <header>
+                                <div class="title_card">
+                                    <i class="fa-solid fa-user"></i>
+                                    <h4>Singolo</h4>
+                                </div>
+                            </header>
+                            <main class="flex ">
+                                <div class="body_card flex border-gray">
                                     
                                     <h3>Professional</h3>
                                     <strong>&euro; 12,00</strong>
