--- a/index.html
+++ b/index.html
@@ -211,14 +211,16 @@
 
 
         <!-- quarta sezione -->
-        <section class="section">
+        <section class="section four">
             <div class="container">
                 <h2 class="section_title">
                     Esegui più operazioni con Dropbox Business
                 </h2>
             </div>
             <div class="container">
-                <div class="row">
+
+                <div class="row-nowrap">
+
                     <div class="col_operazioni">
                         <div class="card_operazioni">
                             <header class="header-card_operazioni">
@@ -235,16 +237,93 @@
                         <div class="card_operazioni">
                             <header class="header-card_operazioni">
                                 <div class="img_operazioni">
-                                    <img src="img/business-feature-switching-tools.png" alt="">
+                                    <img src="img/business-feature-send-files-it.png" alt="">
                                 </div>
                                 <h3>Passa di meno da uno strumento all'altro</h3>
                             </header>
                             <p>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
                         </div>
                     </div>
+
+                    <div class="col_operazioni">
+                        <div class="card_operazioni">
+                            <header class="header-card_operazioni">
+                                <div class="img_operazioni">
+                                    <img src="img/business-feature-coordinate-it.png" alt="">
+                                </div>
+                                <h3>Passa di meno da uno strumento all'altro</h3>
+                            </header>
+                            <p>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row-nowrap">
+
+                    <div class="col_operazioni">
+                        <div class="card_operazioni">
+                            <header class="header-card_operazioni">
+                                <div class="img_operazioni">
+                                    <img src="img/business-feature-integrations-it.png" alt="">
+                                </div>
+                                <h3>Passa di meno da uno strumento all'altro</h3>
+                            </header>
+                            <p>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                        </div>
+                    </div>
+
+                    <div class="col_operazioni">
+                        <div class="card_operazioni">
+                            <header class="header-card_operazioni">
+                                <div class="img_operazioni">
+                                    <img src="img/business-feature-multi-device.png" alt="">
+                                </div>
+                                <h3>Passa di meno da uno strumento all'altro</h3>
+                            </header>
+                            <p>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                        </div>
+                    </div>
+
+                    <div class="col_operazioni">
+                        <div class="card_operazioni">
+                            <header class="header-card_operazioni">
+                                <div class="img_operazioni">
+                                    <img src="img/business-feature-security.png" alt="">
+                                </div>
+                                <h3>Passa di meno da uno strumento all'altro</h3>
+                            </header>
+                            <p>porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox</p>
+                        </div>
+                    </div>
+
                 </div>
                 
             </div> 
+        </section>
+
+
+        <!-- quinda sezione -->
+        <section class="section team">
+            <div class="container">
+                <div class="row">
+                    <div class="col_team">
+                        
+                        <div>
+                            <h1 class="section_title">Più di 500.000 team utilizzano Dropbox Business</h1>
+                        </div>
+
+                        <a href="#">Scopri di più sui nostri clienti</a>
+
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+            </div>
         </section>
     </main>
 
